--- a/index.HTML
+++ b/index.HTML
@@ -1,15 +1,63 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-	  <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title> Papai </title>
-		<link rel="stylesheet" href="css/estilo.css">
-  </head>
-  <body>
-    <h1>__Nome da pessoa especial _______</h1>
-    <p>____Texto_em_homenagem_para_a_pessoa_especial</p>
-		<br>
-		<p>Assinado: _Seu_nome_completo_</p>
-  </body>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mensagem Especial</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background: linear-gradient(to right, #18f0e5, #1333eb);
+            font-family: 'Arial', sans-serif;
+            color: white;
+            text-align: center;
+        }
+        h1 {
+            font-size: 3em;
+            animation: fadeIn 2s;
+        }
+        p {
+            font-size: 1.5em;
+            margin-top: 20px;
+            animation: slideIn 2s;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes slideIn {
+            from { transform: translateY(-50px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+        .button {
+            margin-top: 30px;
+            padding: 15px 30px;
+            font-size: 1.2em;
+            color: #ff7e5f;
+            background-color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #feb47b;
+        }
+    </style>
+</head>
+<body>
+    <div>
+        <h1>Para Iguin o calango</h1>
+        <p>È de muinta insuma que iguin o calango , saiba que um dia ele vai conseguir o que tanto sonha papara se tornar uma pessoa completa e transparente para a sociedade , assinado iago , espero que um dia voce saia do armario.</p>
+    </div>
+    </div>
+
+
+    
+    
+</body>
 </html>
